# ijc-hw2

./: .gitignore  CMakeLists.txt  README.md  tail.c  test-file
.github/workflows/: general-tests.yaml  tail-tests.yaml  wordcount-tests.yaml
src/: Makefile  htab.h  htab_bucket_count.c  htab_clear.c  htab_erase.c  htab_find.c  htab_for_each.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_lookup_add.c  htab_move.c  htab_private.h  htab_size.c  io-test  io.c  io.h  tail.c  wordcount.c  wordcount.cc
test/: Makefile  htab-test.c  htab-valgrind.sh  io-test.c  io-unit.sh  long-lines-file  tail-unit.sh  tail-valgrind.sh  wordcount-unit.sh  wordcount-valgrind.sh  words
